# Mademoiselle-salon

./: .gitignore  .replit  pyproject.toml  replit.md  run.py
artifacts/salon/.replit-artifact/: artifact.toml
attached_assets/: Pasted-Replace-all-sample-services-in-seed-data-with-the-follo_1782124334650.txt
instance/: salon.db
migrations/: env.py
migrations/versions/: 20260720_01_existing_schema.py  20260720_02_customer_crm.py  20260723_03_admin_users.py
salon/: app.py  customer_service.py  graph.py  routes.py
salon/admin/: README.md  __init__.py  auth.py  cli.py  routes.py
salon/models/: __init__.py  models.py
salon/static/css/: style.css
salon/static/js/: main.js
salon/templates/: base.html  book.html  booking_success.html  contact.html  index.html  services.html  welcome.html
salon/templates/admin/: base.html  booking_detail.html  booking_edit.html  bookings.html  dashboard.html  login.html
salon/translations/en/LC_MESSAGES/: messages.mo  messages.po
salon/translations/pt/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py  test_admin_auth.py  test_admin_bookings.py  test_customer_crm.py  test_make_webhook.py  test_migrations.py
