[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "tzdata>=2025.2",
]
